--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@elfalem/leaflet-curve": "^0.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@turf/bezier-spline": "^6.5.0",
     "leaflet": "^1.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
