--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "gh-predeploy": "bun run build",
+    "gh-deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@turf/bezier-spline": "^7.0.0",
