removed github pages dependency as we now deploy on vercel

--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "gh-predeploy": "bun run build",
-    "gh-deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@turf/bezier-spline": "^7.0.0",
@@ -32,7 +30,6 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "gh-pages": "^6.1.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
